[package]
name = "avm1-types"
version = "0.10.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Types for the Flash ActionScript Virtual Machine (AVM1)"
documentation = "https://github.com/open-flash/avm1-types"
homepage = "https://github.com/open-flash/avm1-types"
repository = "https://github.com/open-flash/avm1-types"
readme = "./README.md"
keywords = ["ast", "swf", "avm1"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "open-flash/avm1-types", branch = "master" }

[lib]
name = "avm1_types"
path = "src/lib.rs"

[dependencies]
hex = { version = "^0.4.2", optional = true}
serde = { version = "^1.0.104", optional = true, features = ["derive"] }
vec1 = { version = "^1.4.0" }

[features]
# Serialization is enabled by default.
# Use `avm1-types = { version = "...", default-features = false }` to disable it.
default = ["use-serde"]

# Adds implementation for `serde`'s `Serialiaze` and `Deserialize` traits.
use-serde = ["hex", "serde", "vec1/serde"]

[dev-dependencies]
serde_json_v8 = "^0.0.1"
test-generator = "^0.3.0"

[workspace]
members = ["bin"]
