[package]
name = "avm1-types"
version = "0.13.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Types for the Flash ActionScript Virtual Machine (AVM1)"
documentation = "https://github.com/open-flash/avm1-types"
homepage = "https://github.com/open-flash/avm1-types"
repository = "https://github.com/open-flash/avm1-types"
readme = "./README.md"
keywords = ["ast", "swf", "avm1"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.60.0"

[lib]
name = "avm1_types"
path = "src/lib.rs"

[dependencies]
hex = { version = "0.4.3", optional = true }
ordered-float = "3.0.0"
serde = { version = "1.0.137", optional = true, features = ["derive"] }
vec1 = "1.8.0"

[features]
# Serialization is enabled by default.
# Use `avm1-types = { version = "...", default-features = false }` to disable it.
default = ["serde"]

# Adds implementation for `serde`'s `Serialiaze` and `Deserialize` traits.
serde = ["dep:hex", "dep:serde", "vec1/serde"]

[dev-dependencies]
serde_json_v8 = "0.1.1"
test-generator = "0.3.0"

[workspace]
members = ["bin"]
